# SysML-v2-Python-Units

./: .gitignore  LICENSE  README.md  documentation.ipynb  pyproject.toml
.github/workflows/: publish.yml  tests.yml
sysmlv2_units/: __init__.py  compound_units.py  converter.py  helper.py  quantity_mapper.py  units_helper.py
tests/: test_units.py  units_tests.sysml
